# lucky_you

./: .gitignore  CMakeLists.txt  README.md  batterystatus.cpp  batterystatus.h  chat.cpp  chat.h  chat.ui  commands.cpp  commands.h  lucky_you.cpp  lucky_you.ui  mugshot.cpp  mugshot.h  server.cpp  server.h  speak.cpp  speak.h  threaddata.h
src/: batterystatus.cpp  batterystatus.h  lucky_you.cpp  lucky_you.h  main.cpp  mugshot.h  server.h  speak.cpp  speak.h  threaddata.h
